[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/SpaceShip/SpaceShip.png" type="Texture" id=1]
[ext_resource path="res://Assets/SpaceShip/Thrusters/Big/BigEngineLaser1.png" type="Texture" id=2]
[ext_resource path="res://Assets/SpaceShip/Thrusters/Big/BigEngineLaser2.png" type="Texture" id=3]
[ext_resource path="res://SpaceShip/SpaceShip.gd" type="Script" id=4]
[ext_resource path="res://Assets/SpaceShip/Cannons/LeftCannon.png" type="Texture" id=5]
[ext_resource path="res://Assets/SpaceShip/Cannons/RightCannon.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 65.0

[node name="SpaceShip" type="Area2D"]
collision_mask = 22
script = ExtResource( 4 )

[node name="Sprites" type="Node2D" parent="."]

[node name="BasePivot" type="Position2D" parent="Sprites"]

[node name="Sprite" type="Sprite" parent="Sprites/BasePivot"]
texture = ExtResource( 1 )

[node name="EnginePivot" type="Position2D" parent="Sprites"]
position = Vector2( 0, 34 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprites/EnginePivot"]
frames = SubResource( 1 )
playing = true

[node name="LeftCannon" type="Position2D" parent="Sprites"]
visible = false

[node name="Sprite" type="Sprite" parent="Sprites/LeftCannon"]
texture = ExtResource( 5 )

[node name="RightCannon" type="Position2D" parent="Sprites"]
visible = false

[node name="Sprite" type="Sprite" parent="Sprites/RightCannon"]
texture = ExtResource( 6 )

[node name="CannonPos" type="Node2D" parent="."]

[node name="CenterCannon" type="Position2D" parent="CannonPos"]
position = Vector2( 0, -36 )

[node name="LeftCannon" type="Position2D" parent="CannonPos"]
position = Vector2( 21, -25 )

[node name="RightCannon" type="Position2D" parent="CannonPos"]
position = Vector2( -21, -25 )

[node name="Hurtbox" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -6, -31, 6, -31, 14, -24, 15, -6, 21, 3, 31, 3, 31, 12, 27, 19, 16, 24, 10, 24, 9, 31, -8, 31, -10, 24, -17, 24, -30, 17, -32, 3, -21, 2, -14, -6, -15, -17, -13, -28 )

[node name="LaserCd" type="Timer" parent="."]
wait_time = 0.35

[node name="CollectBox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectBox"]
shape = SubResource( 2 )

[connection signal="timeout" from="LaserCd" to="." method="_on_LaserCd_timeout"]
